syntax = "proto3";
import "google/protobuf/empty.proto";

option go_package = "github.com/ecgbeald/burgate";

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (Order);
    rpc ReceiveCookedOrder(Order) returns (google.protobuf.Empty);
}

message Item {
    string ID = 1;
    string Name = 2;
    int32 Quantity = 3;
    string PriceID = 4;
}

message ItemsWithQuantity {
    string ID = 1;
    int32 Quantity = 2;
}

message CreateOrderRequest {
    string customerID = 1;
    repeated ItemsWithQuantity Items = 2;
}

message Order {
    string ID = 1;
    string customerID = 2;
    string Status = 3;
    repeated Item Items = 4;
    string orderMachineID = 5;
}